// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card default state 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      A card
    </Text>
  </View>
</View>
`;

exports[`2. pass an empty state to the image component 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri={null}
    />
  </View>
  <View>
    <Text>
      A card with an empty image
    </Text>
  </View>
</View>
`;

exports[`3. card without an image when showimage is false 1`] = `
<View>
  <View>
    <Text>
      No image
    </Text>
  </View>
</View>
`;

exports[`4. pass an empty state to the image component when the uri is null 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri={null}
    />
  </View>
  <View>
    <Text>
      No URI
    </Text>
  </View>
</View>
`;

exports[`5. card with reversed layout 1`] = `
<View>
  <View>
    <Text>
      A card in reverse
    </Text>
  </View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
</View>
`;

exports[`6. card with reversed layout and no image 1`] = `
<View>
  <View>
    <Text>
      A card in reverse with no image
    </Text>
  </View>
</View>
`;

exports[`7. card with a loading state 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        fadeImageIn={false}
        highResSize={360}
        lowResQuality={null}
        lowResSize={50}
        uri="https://img.io/img"
      />
    </View>
    <View>
      <Gradient
        degrees={264}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
    </View>
  </View>
</View>
`;

exports[`8. card with a loading state and no image 1`] = `
<View>
  <View>
    <View>
      <Gradient
        degrees={264}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
    </View>
  </View>
</View>
`;

exports[`9. card with reversed loading state 1`] = `
<View>
  <View>
    <View>
      <Gradient
        degrees={264}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
    </View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        fadeImageIn={false}
        highResSize={360}
        lowResQuality={null}
        lowResSize={50}
        uri="https://img.io/img"
      />
    </View>
  </View>
</View>
`;

exports[`10. card with reversed loading state with no image 1`] = `
<View>
  <View>
    <View>
      <Gradient
        degrees={264}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
    </View>
  </View>
</View>
`;

exports[`11. card should not re-render when imageratio prop is changed 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Do not re-render me
    </Text>
  </View>
</View>
`;

exports[`11. card should not re-render when imageratio prop is changed 2`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Do not re-render me
    </Text>
  </View>
</View>
`;

exports[`12. card should re-render when image uri changes 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Some text
    </Text>
  </View>
</View>
`;

exports[`12. card should re-render when image uri changes 2`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="http://foo"
    />
  </View>
  <View>
    <Text>
      Some text
    </Text>
  </View>
</View>
`;

exports[`13. card should re-render when low res size changes 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Some content
    </Text>
  </View>
</View>
`;

exports[`13. card should re-render when low res size changes 2`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={null}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Some content
    </Text>
  </View>
</View>
`;

exports[`14. card should re-render when high res size changes 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Some content
    </Text>
  </View>
</View>
`;

exports[`14. card should re-render when high res size changes 2`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={null}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Some content
    </Text>
  </View>
</View>
`;

exports[`15. card should re-render when loading state changes 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        fadeImageIn={false}
        highResSize={360}
        lowResQuality={null}
        lowResSize={50}
        uri="https://img.io/img"
      />
    </View>
    <View>
      <Gradient
        degrees={264}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
      <Gradient
        degrees={267}
      />
    </View>
  </View>
</View>
`;

exports[`15. card should re-render when loading state changes 2`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResQuality={null}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </View>
  <View>
    <Text>
      Re-render me
    </Text>
  </View>
</View>
`;
